# TypeLoom

./: .gitignore  LICENSE  Makefile  PAPER.md  README.md
ceph_db/: Cargo.toml  NOTES.md  doublecheck.md
ceph_db/cmp_test/: test_bytecode_lexer.cmp
ceph_db/src/: ast.rs  bidirectional.rs  bytecode.rs  errors.rs  graph.rs  lexer.rs  lib.rs  macros.rs  main.rs  node.rs  parser.rs  tests.rs  type_system.rs  typekind.rs
docs/: 404.html  acknowledgements.html  demo_gifs.html  index.html  paper.html  paper_redir.html  print.html  references.html  searchindex.js  searchindex.json  white_paper.html
lsp-server/: ARCHITECTURE.md  DEMO.md  INFERENCE.md  Makefile  README.md  algorithmL.py  ast.json  ast.loom  contravariance.py  definitions.loom  exceptions.py  graph.py  kvstore.py  lambda.py  log.md  main.go  prettify.py  ruff.toml  sutypes.py  todo.list  type_checker.py  type_graph.json  type_inference.py  type_parser.py  typedefs.json  unit_tests.py  utils.py
lsp-server/loom/: Makefile  alias_t.su  basic_inference.su  go.mod  hello.su  log.txt  main.go  missing_attribute.su  params_mismatch.su  reassign_var.su  recursionRecursion.su  runtime_guards.su  simple_errors.su  structural_t.su  union_literals.su
lsp-server/loom/analysis/: state.go
paper/: book.toml
paper/src/: SUMMARY.md  acknowledgements.md  demo_gifs.md  paper.md  paper_redir.md  references.md  white_paper.md
playground/: main.su
research/: IntroductionAndLiteratureReview.md  NOTES.md
snippets/: main.su
typeloom/: CHANGELOG.md  README.md  package-lock.json  package.json  vsc-extension-quickstart.md
(+11 files in other folders)
